# ma-client-libs

./: .gitignore  Key_Storage.md  README.md
kerberos/: Makefile  README.md  ReadMe.txt  configure.ac  kerberos.vcxproj  kerberos.vcxproj.filters  pc.in
kerberos/example/: README.md  configure.ac  register_application.sh
kerberos/example/src/: Makefile.am  main.c
kerberos/src/: Makefile.am  ma_comm_error_codes.h  ma_communication.c  ma_communication.h
kerberos/src/crypto/: CryptoKerberos.c  CryptoKerberos.h  aes.c  aes.c_old  aes.h
kerberos/src/encoder/: authenticator.c  authenticator.h  constants.h  encKdcRepPart.c  encKdcRepPart.h  encTicketPart.c  encTicketPart.h  encryptedData.c  encryptedData.h  errno.h  error.c  error.h  replyAP.c  replyAP.h  replyAS.c  replyAS.h  requestAP.c  requestAP.h  requestAS.c  requestAS.h  sessionKey.c  sessionKey.h  ticket.c  ticket.h
kerberos/src/logger/: logger.c  logger.h
kerberos/src/protocol/: communication.c  communication.h  communication.js  protocol.c  protocol.h  secure-util.c  secure-util.h  unique.h  utils.c  utils.h
key_storage/: example.py
libaes/: Makefile  Makefile.am  README  README.md  configure.ac  libaes.vcxproj  libaes.vcxproj.filters
libaes/flascc/: CryptoAPI.c  CryptoAPI.h
libaes/mac/: ghash.c  ghash.h
libaes/mode/: ctr.c  ecb.c  gcm.c
libaes/padding/: nullpadding.c  nullpadding.h  pkcs7padding.c  pkcs7padding.h
libaes/src/: CryptoAPI.c  CryptoAPI.h  Makefile.am
libaes/src/mode/: ctr.h  ecb.h  gcm.c  gcm.h
libaes/src/padding/: padding.h
libaes/src/symmetric/: aes.c
libaes/src/util/: cryptoutil.h  errno.h
libaes/symmetric/: aes.h
libaes/util/: codes.h  cryptoutil.c  secureutil.c  secureutil.h
