AUTOMAKE_OPTIONS = subdir-objects
lib@PACKAGE_NAME@_@PACKAGE_VERSION@_la_includedir = $(includedir)/@PACKAGE_NAME@-@PACKAGE_VERSION@

lib_LTLIBRARIES=lib@PACKAGE_NAME@-@PACKAGE_VERSION@.la

lib@PACKAGE_NAME@_@PACKAGE_VERSION@_la_SOURCES=\
crypto/aes.c \
crypto/CryptoKerberos.c \
encoder/authenticator.c \
encoder/encKdcRepPart.c \
encoder/encryptedData.c \
encoder/encTicketPart.c \
encoder/error.c \
encoder/replyAP.c \
encoder/replyAS.c \
encoder/requestAP.c \
encoder/requestAS.c \
encoder/sessionKey.c \
encoder/ticket.c \
protocol/communication.c \
protocol/protocol.c \
protocol/secure-util.c \
protocol/utils.c

nobase_lib@PACKAGE_NAME@_@PACKAGE_VERSION@_la_include_HEADERS=

